# CHANGELOG
# ---
# * Successful return code for HiTRUST is actually 00 [cody]
#
# * Make ActiveMerchant::Billing::Error a subclass of ActiveMerchant::ActiveMerchantError [cody]
#
# * Handle the return from the offsite payment gateways [cody]
#
# * Default HiTRUST order description to "Store purchase" [cody]
#
# * Fix HiTRUST field names [cody]
#
# * Add support for passing in the locale code [georg.fr...@meandevel.com]
#
# * Add support for the Offsite payment gateway HiTRUST [cody]
#
# * Accept SuccessWithWarning as success [cody]
#
# * Add a link to the LinkPoint staging server docs in remote_linkpoint_test.rb [cody]
#
# * Update Discover regex [cody]
#
# * Match full pan range of Maestro cards from 12 - 19 digits in length [cody]
#
# * Fix errors on base of CreditCard [josh.bassett]
#
# * Update product to use Rubigen instead of stolen Rails generator [cody]
#
# * Mimic directory structure of unit tests in remote tests [cody]
# 
# * Restructure the location of the remote tests [cody] 
#
# * Ensure DataCash order_id is limited to 30 characters [cody]
#
# * Return the pretty messages from PayJunction based on the return code [cody]
#
# * make CreditCard.require_verification_value = true the default [cody]
#
# * Use existing credit_card helper in credit card tests [cody]
#
# * Return the authrorization number of the original transaction in the SkipJack gateway [cody]
#
# * Update format of line items given to the gateway. Cleanup and uncomment unit tests [cody]
#
# * Add support for the SkipJack gateway [Bill Bereza, cody]
#
# * Make the bogus gateway easier to test by moving messages into constants [cody]
#
# * Add retry logic when connection has been refused for all gateways. Enable safe retries of all connection failures with the PayflowGateway, as it has a unique request header. [cody]
#
# * Catch Timeout::Error when posting data [cody]
#